--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
 
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
